--- a/css/odometer.css
+++ b/css/odometer.css
@@ -1,6 +1,6 @@
 .odometer {
   background: black;
-  font-family: Times New Roman;
+  font-family: Arial;
   border: 1px solid;
   -moz-border-radius:    10px;
   -webkit-border-radius: 10px;
