--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
 h1, h2, h3 {
   margin: 0; padding: 0;
   letter-spacing: -0.05em;
-  font-family: Georgia, "Times New Roman", Times, serif;
+  font-family: Arial, Helvetica, sans-serif;
   font-weight: normal;
   color: white;
   text-align: center;
