--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ p {
 .small { font-size: 70%; }
 
 #display {
-  background: #470F14;
+  background: #EDDBAB;
   padding: 2em;
   margin:  2em;
   -moz-border-radius:    30px;
