--- a/css/odometer.css
+++ b/css/odometer.css
@@ -20,9 +20,9 @@
     left bottom,
     from( #000 ),
     to(   #000 ),
-    color-stop( 0.25, #583119 ),
+    color-stop( 0.25, #F0B600),
     color-stop( 0.35, #aaa ),
-    color-stop( 0.55, #583119 )
+    color-stop( 0.55, #F0B600 )
   );
 }
 
