--- a/css/odometer.css
+++ b/css/odometer.css
@@ -18,8 +18,8 @@
     linear,
     left top,
     left bottom,
-    from( #000 ),
-    to(   #000 ),
+    from( #F0B600 ),
+    to(   #F0B600 ),
     color-stop( 0.25, #F0B600),
     color-stop( 0.35, #aaa ),
     color-stop( 0.55, #F0B600 )
