--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body {
   background: #0064a6;
   color:      #757890;
   text-align: center;
-
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 18px;
 }
 
